--- a/index.html
+++ b/index.html
@@ -83,10 +83,57 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAbo7elZL9ewjchVsm8QOYNaoidvoAoM4&callback=initMap">
 </script>
 
+<footer class="footer">
+  <div class="footer-container">
+
+    <!-- Logo + Contact -->
+    <div class="footer-col">
+      <img src="logo.jpg" alt="The Good Neighbour Logo" class="footer-logo">
+      <p><strong>The Good Neighbour Espresso Bar</strong></p>
+      <p>
+        <a href="https://maps.google.com/?q=The+Good+Neighbour+Espresso+Bar+Toronto" target="_blank">
+          238 Annette St, Toronto, ON M6P 1R3
+        </a>
+      </p>
+      <p>(416) 555-1234</p>
+      <p><strong>Open Daily:</strong> 9am – 5pm</p>
+
+      <div class="footer-socials">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-tiktok"></i></a>
+      </div>
+    </div>
+
+    <!-- Navigation Links -->
+    <div class="footer-col">
+      <h4>Explore</h4>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#description">Description</a></li>
+        <li><a href="#find">Find Us</a></li>
+        <li><a href="#visit">Visit Us</a></li>
+        <li><a href="#menu">Menu</a></li>
+      </ul>
+    </div>
+
+    <!-- Short Description -->
+    <div class="footer-col">
+      <p>
+        Once just a neighborhood café, now a community hub, 
+        The Good Neighbour is where warm coffee meets 
+        warm connections. Join us in the heart of Toronto— 
+        one cup, one conversation at a time.
+      </p>
+    </div>
+
+  </div>
+</footer>
+
 
 
  <button id="scrollToTopBtn" title="Scroll to Top">
-  +
+  ▲
 </button>
 
 <script src="script.js"></script>
