--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#info-section">Home</a></li>
+        <li><a href="#hero">Home</a></li>
         <li><a href="#menu">Menu</a></li>
         <li><a href="https://www.google.com/maps/dir//The+Good+Neighbour+Espresso+Bar,+238+Annette+St,+Toronto,+ON+M6P+1R1/@43.6626089,-79.5535146,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b369e05cac3f9:0x286e11550139abc9!2m2!1d-79.4710832!2d43.6626026?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" ">Visit Us</a></li>
       </ul>
@@ -58,11 +58,11 @@
   <!-- PARTNERSHIP SECTION -->
 <section class="partnership">
   <div class="partnership-text">
-    <h4>Baked Goods, Pastries, & Sandwiches</h4>
-    <h1>Better Together: The Good Neighbour × Hunny Bunny’s Bakery</h1>
-    <p>Every pastry we serve is handcrafted by Hunny Bunny Bakery, a local gem we’re proud to support. 
-    It’s a sweet partnership that supports local business and builds up Roncesvalles—one bite at a time. 
-    It’s more than a treat — it’s a taste of Toronto’s small business spirit, made fresh just for you.</p>
+    <h4>Baked Goods, Pastries, & Drinks</h4>
+    <h1>Better Together: The Good Neighbour</h1>
+    <p>At The Good Neighbour, everything we serve is made with care and always fresh. 
+From our baked goods to our handcrafted drinks, we’re committed to quality that you can taste in every sip and bite. 
+More than just a coffee shop, we’re a gathering place for the community—serving warmth, connection, and comfort each day in the heart of Roncesvalles.</p>
     <a href="#order" class="btn btn-primary">Menu →</a>
   </div>
   <div class="partnership-image">
@@ -82,6 +82,34 @@
 <script async
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAbo7elZL9ewjchVsm8QOYNaoidvoAoM4&callback=initMap">
 </script>
+
+<section class="instagram-section">
+  <h2>Check Out Our Instagram</h2>
+  <p>See the latest brews, pastries, and moments from <strong>@goodneighbourexpressobar</strong></p>
+  
+  <div class="instagram-gallery">
+    <div class="insta-item">
+      <a href="https://www.instagram.com/p/DKw3bv0gojN/" target="_blank">
+        <img src="image1.png" alt="Coffee post">
+      </a>
+    </div>
+    <div class="insta-item center">
+      <a href="https://www.instagram.com/p/C6_axe9grbU/" target="_blank">
+        <img src="image2.png" alt="Pastry post">
+      </a>
+    </div>
+    <div class="insta-item">
+      <a href="https://www.instagram.com/p/CU2O9_arn6W/" target="_blank">
+        <img src="image3.png" alt="Cafe vibes">
+      </a>
+    </div>
+  </div>
+
+  <a href="https://instagram.com/goodneighbourexpressobar" 
+     target="_blank" class="btn-instagram">
+     Follow Us on Instagram
+  </a>
+</section>
 
 <footer class="footer">
   <div class="footer-container">
@@ -109,11 +137,11 @@
     <div class="footer-col">
       <h4>Explore</h4>
       <ul>
-        <li><a href="#about">About</a></li>
+        <li><a href="#info-section">About</a></li>
         <li><a href="#description">Description</a></li>
-        <li><a href="#find">Find Us</a></li>
-        <li><a href="#visit">Visit Us</a></li>
-        <li><a href="#menu">Menu</a></li>
+        <li><a href="#location-section">Find Us</a></li>
+        <li><a href="https://www.google.com/maps/dir//The+Good+Neighbour+Espresso+Bar,+238+Annette+St,+Toronto,+ON+M6P+1R1/@43.6626089,-79.5535146,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b369e05cac3f9:0x286e11550139abc9!2m2!1d-79.4710832!2d43.6626026?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Visit Us</a></li>
+        <li><a href="#hero">Menu</a></li>
       </ul>
     </div>
 
